# OpenMATERIAL

./: README.md
.github/workflows/: pathtracer_build.yml
glTF_extensions/: README.md
glTF_extensions/OpenMaterial_asset_info/: README.md
glTF_extensions/OpenMaterial_conductivity_data/: README.md
hdr/: README.md
materials/: AC11DS.gltf  Concrete_Broomfinish.gltf  Concrete_Plate.gltf  README.md  SMA11S.gltf  SMA8S.gltf  aluminium.gltf  concrete.gltf  glass.gltf  gold.gltf  iron.gltf  plasterboard.gltf  plexiglass.gltf  polypropylene.gltf  rubber.gltf  vegetation.gltf
materials/data/: AC11DS_permittivity.gltf  (+29 more)
model_structure/: Pedestrian_Structure.md  README.md  Road_Structure.md  Vehicle_Structure.md
objects/: README.md  cone_gold.gltf  cubeEnriched_aluminium.gltf  cube_aluminium.gltf  cube_gold.gltf  cube_pbr_gold.gltf  cylinderEnriched_aluminium.gltf  monkey_gold.gltf  sphereEnriched_aluminium.gltf  sphere_aluminium.gltf  sphere_gold.gltf  teapot_aluminium.gltf  teapot_gold.gltf  teapot_iron.gltf  torus_aluminium.gltf  torus_gold.gltf
pathtracer/: .gitignore  CMakeLists.txt  README.md  check.sh  doxygen.conf
pathtracer/scripts/: allRotation.sh
pathtracer/src/: assetbase.h  assetgeometry.cpp  assetgeometry.h  assetinfo.h  assetinstance.h  assetmaterial.cpp  assetmaterial.h  assetmaterialior.cpp  assetmaterialior.h  background.h  bbox.h  constants.h  defines.h  exceptions.h  interpolation.h  intersect.h  main.cpp  materialmodel.h  matrix.h  mesh.cpp  mesh.h  node.h  quaternion.h  random.cpp  random.h  ray.h  referencelink.cpp  referencelink.h  renderer.cpp  renderer.h  sensor.cpp  sensor.h  spectrum.h  tonemapping.h  transformation.h  utils.cpp  utils.h  uuid.h  vector.h
pathtracer/src/backgrounds/: fatal.h  hdr.cpp  hdr.h
pathtracer/src/materialmodels/: common.cpp  common.h  specular.cpp  specular.h
pathtracer/src/sensors/: camera.cpp  camera.h
(+17 files in other folders)
